Issue #12 Add "pan" tools (and progress bar)
Nodes are culled to the viewport.
Labels only for visible nodes.
Links for any visible node (link still connected to invisible node)
feats.allNodes contains all the nodes added to feats. feats.nodes now
contains the ones within the viewport.

loadLinks renamed to buildLinks, which works with feats.allNodes.
positionLinks now called after positionNodes and positionLabels.

positionNodes uses filtrex and custom function withinBounds to cull to
viewport.

positionLinks filters the links to any source or target in feats.nodes.

Fixed label offset bug by removing the radius and labelOffset from the
x() scaled adjustments.

svg cursor set to move.
width now converted to a Number.

Added progress bar for simulation. Uses updateLayoutStatus().

panHome now sets home to be the center of the viewport.

--- a/graph.css
+++ b/graph.css
@@ -8,11 +8,8 @@ body {
   margin: 5px;
 }
 
-.progress-bar {
-  min-width: 2em; 
-}
-
 svg {
+  cursor: move;
 }
 
 .link {
